--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,10 @@
 server.port=9999
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web=DEBUG
 spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/test05}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:pass}
 #spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.datasource.hikari.maximum-pool-size=${DB_CONNECTION_POOL_MAX_SIZE:5}
-spring.datasource.url=${DB_URL}
-spring.datasource.driver-class-name=${DB_DRIVER_CLASS_NAME:org.postgresql.Driver}
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.generate_statistics=true
