--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,14 @@ server.port=9999
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web=DEBUG
-spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/test05}
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/test05}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/test05}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:pass}
 #spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#hibernate ddl auto
+spring.jpa.hibernate.ddl-auto=update
