--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.hikari.maximum-pool-size=${DB_CONNECTION_POOL_MAX_SIZE:5}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
