--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ server.port=9999
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web=DEBUG
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/test05}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/test222}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:pass}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.hikari.maximum-pool-size=${DB_CONNECTION_POOL_MAX_SIZE:5}
+spring.flyway.baseline-on-migrate=true
