gradle build configuration has changed, create a task

--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,12 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+bootJar {
+	archiveFileName = "noteApp.jar"
+}
+
+tasks.register('release', Copy) {
+	from './build/libs/notesApp.jar'
+	into './'
+}
