--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ tasks.named('test') {
 }
 
 bootJar {
-	archiveFileName = "noteApp.jar"
+	archiveFileName = "notesApp.jar"
 }
 
 tasks.register('release', Copy) {
