--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ plugins {
 	id 'java'
 }
 
+java {
+	disableAutoTargetJvm()
+}
+
 group = 'com.groupone'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
