--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,12 @@ plugins {
 	id 'java'
 }
 
-java {
-	disableAutoTargetJvm()
-}
 
 group = 'com.groupone'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+targetCompatibility = '17'
+
 
 configurations {
 	compileOnly {
