--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ bootJar {
 
 tasks.register('release', Copy) {
 	from './build/libs/notesApp.jar'
-	into './'
+	into '/root/notes'
 }
 
 release.dependsOn bootJar
