--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,15 +7,16 @@ pipeline {
             }
         }
 
-        stage('copy') {
-                    steps {
-                        sh 'cp /var/lib/jenkins/workspace/noteApp/notesApp.jar /root/notes'
-                    }
-                }
+//         stage('copy') {
+//                     steps {
+//                         sh 'su jenkins'
+//                         sh 'cp /var/lib/jenkins/workspace/noteApp/notesApp.jar /root/notes'
+//                     }
+//                 }
 
         stage('deploy') {
             steps {
-                sh 'java -jar /root/notes/notesApp.jar'
+                sh 'java -jar /var/lib/jenkins/workspace/noteApp/notesApp.jar'
             }
         }
     }
