--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,8 +8,14 @@ pipeline {
         }
 
         stage('copy') {
+                    steps {
+                        sh 'cp /var/lib/jenkins/workspace/noteApp/notesApp.jar /root/notesApp'
+                    }
+                }
+
+        stage('deploy') {
             steps {
-                sh 'scp /var/lib/jenkins/workspace/Deploy2/notesApp.jar root@159.89.107.231:/root/notesApp'
+                sh 'scp /var/lib/jenkins/workspace/noteApp/notesApp.jar root@159.89.107.231:/root/notesApp'
             }
         }
     }
